# pi-vitals

./: .gitignore  Cargo.toml  README.md  deploy.sh
src/: index.html  main.rs  vitals.rs  ws.rs
