
[package]
name = "pi-vitals"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pi-vitals"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true